--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,4 +57,17 @@
         android:layout_marginStart="500dp"
         android:layout_marginTop="200dp"
         android:text="Attack" />
+
+
+    <!-- 무적 버튼 (T) -->
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_infinity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="600dp"
+        android:layout_marginTop="200dp"
+        android:background="#FF03DAC5"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:text="INFINITY" />
 </RelativeLayout>
